# Urban-Spatial-Data-Analysis-Notebook

./: .gitignore  README.md
1-introduction 导言/: 1-Python语言介绍.md  2-城市空间分析的Python介绍和最新进展.md
2-Pthon入门/: 2.1-Python环境配置并运行第一个程序.md  2.2-Python变量.ipynb  什么是“if __name__ == __main__”？.md
4-空间数据分析/4.2-ArcGIS Python系列/: 4.2.12-实操1-利用Python批量处理地理数据的坐标系.ipynb  4.2.3-arcpy基础(代码练习).ipynb  4.2.7-处理几何数据代码练习和示例2.ipynb  README.md
4-空间数据分析/4.2-【ArcGIS Python系列】/: 4.2.1-arcpy介绍和安装.md  4.2.10-自定义工具箱.md  4.2.11-ArcGIS_Pro常见问题.md  4.2.12-利用ArcGIS_Python批量处理地理数据的坐标系.md  4.2.13-实操2-使用 Python 对图像中的洪水进行分类.ipynb  4.2.13-实操2-使用ArcGIS_Python检测洪水影像的区域.md  4.2.14-实操3-利用ArcGIS_Python制作考虑路况的交通等时圈.md  README.md  (+15 more)
4-空间数据分析/其他案例/上海路网聚合/: .gitignore  README.md  main.ipynb  pyproject.toml  visualize_road_province.ipynb
4-空间数据分析/其他案例/旅行规划问题/: .env.example  .gitignore  README.md  all_locations_map.html  config.ini.example  locations.json  manual_route_map.html  pyproject.toml  route_map_aco.html  route_map_ga.html  route_map_nn.html  travel_time_cache_driving.json
4-空间数据分析/其他案例/旅行规划问题/chengdu_travel_planner_driving/: 01travel_planner_driving.py  README.md  __init__.py  interactive_travel_setup.py  manual_route_time.py  plot_locations.py  travel_planner_driving.py
4-空间数据分析/其他案例/旅行规划问题/chengdu_travel_planner_driving/cache/: chengdu_locations_gcj02.json  chengdu_travel_path_cache_driving.json  chengdu_travel_time_cache_driving.json
4-空间数据分析/其他案例/旅行规划问题/chengdu_travel_planner_driving/data/maps/: all_locations_map.html  manual_route_map.html  route_map_aco.html  route_map_ga.html  route_map_nn.html
(+87 files in other folders)
