[project]
name = "shanghai-road-clustering-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alphashape>=1.3.1",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "fuzzywuzzy>=0.18.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.0",
    "jieba>=0.42.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pyahocorasick>=2.2.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
